Update to 4.7-beta-1